fix manage partner ui overflow hidden

--- a/src/pages/admin/partner/ManagePartners.module.scss
+++ b/src/pages/admin/partner/ManagePartners.module.scss
@@ -69,6 +69,10 @@
   }
 }
 
+.table {
+  overflow: visible;
+}
+
 .tableActions {
   display: flex;
   align-items: center;
